--- a/styles/alert.css
+++ b/styles/alert.css
@@ -1,15 +1,21 @@
-.alert{
-	background: #e44e4e;
-	color: white;
-	padding: 10px;
-	text-align: center;
-	border:1px solid #b32929;
+.alert, .done {
+    background: #e44e4e;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #b32929;
+    position: fixed; /* atau absolute */
+    top: 20px; /* atur sesuai kebutuhan */
+    right: 20px; /* atur sesuai kebutuhan */
+    z-index: 1000; /* memastikan elemen ini berada di atas elemen lain */
+    width: 300px; /* lebar tetap agar mudah diatur */
 }
 
-.done{
-	background: #40ee66;
-	color: white;
-	padding: 10px;
-	text-align: center;
-	border:1px solid #2bba58;
+.done {
+    background: #40ee66;
+    border: 1px solid #2bba58;
+}
+
+.alert, .done {
+	border-radius: 5px;
 }
