--- a/styles/profil.css
+++ b/styles/profil.css
@@ -371,3 +371,66 @@
 .info-bio {
   color:#707070;
 }
+
+
+/* BLOCK BUTTON */
+.blockButton {
+    background-color: #ff4d4d; /* Warna merah untuk tombol blokir */
+    color: white; /* Warna teks putih */
+    border: none; /* Tanpa border */
+    padding: 5px 10px; /* Padding pada tombol */
+    font-size: 14px; /* Ukuran font */
+    cursor: pointer; /* Pointer pada hover */
+    border-radius: 5px; /* Border radius untuk rounded corners */
+    transition: background-color 0.3s ease; /* Transisi halus untuk perubahan warna */
+    margin-top: 10px;
+}
+
+.blockButton:hover {
+    background-color: #ff1a1a; /* Warna saat dihover */
+}
+
+.blockButton:active {
+    background-color: #e60000; /* Warna saat di klik */
+}
+
+.blockButton:focus {
+    outline: none; /* Menghilangkan outline default saat tombol di fokus */
+    box-shadow: 0 0 0 2px rgba(255, 77, 77, 0.5); /* Shadow untuk fokus */
+}
+
+.blockButton:disabled {
+    background-color: #ffcccc; /* Warna saat tombol dinonaktifkan */
+    cursor: not-allowed; /* Cursor tidak diijinkan */
+}
+
+/* UNBLOCK BUTTON */
+.unblockButton {
+  background-color: #4CAF50; /* Warna merah untuk tombol blokir */
+  color: white; /* Warna teks putih */
+  border: none; /* Tanpa border */
+  padding: 5px 10px; /* Padding pada tombol */
+  font-size: 14px; /* Ukuran font */
+  cursor: pointer; /* Pointer pada hover */
+  border-radius: 5px; /* Border radius untuk rounded corners */
+  transition: background-color 0.3s ease; /* Transisi halus untuk perubahan warna */
+  margin-top: 10px;
+}
+
+.unblockButton:hover {
+  background-color: #45a049; /* Warna saat dihover */
+}
+
+.unblockButton:active {
+  background-color: #3e8e41; /* Warna saat di klik */
+}
+
+.unblockButton:focus {
+  outline: none; /* Menghilangkan outline default saat tombol di fokus */
+  box-shadow: 0 0 0 2px rgba(255, 77, 77, 0.5); /* Shadow untuk fokus */
+}
+
+.unblockButton:disabled {
+  background-color: #ffcccc; /* Warna saat tombol dinonaktifkan */
+  cursor: not-allowed; /* Cursor tidak diijinkan */
+}
