--- a/styles/daftar.css
+++ b/styles/daftar.css
@@ -164,3 +164,14 @@ button[type="submit"]:hover {
         margin: 0 auto;
     }
 }
+
+.terms {
+    font-size: 10px;
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+.inilink {
+    text-decoration: none;
+    margin-bottom: 5px;
+}
