--- a/styles/daftar.css
+++ b/styles/daftar.css
@@ -43,6 +43,11 @@ body {
     flex-direction: column;
 }
 
+a {
+    text-decoration: none;
+    color: #007bff;
+}
+
 .login-form h2 {
     margin-bottom: -5px;
     text-align: center;
