--- a/styles/image.css
+++ b/styles/image.css
@@ -308,7 +308,8 @@ body {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 100%;
-  max-width: 700px;
+  max-width: 850px;
+  min-height: 250px;
   overflow: hidden;
   margin: 20px;
   display: flex;
@@ -318,7 +319,7 @@ body {
 
 .content-image {
   width: 100%; /* Full width for small screens */
-  height: auto;
+  height: fit-content;
 }
 
 .card-details {
@@ -388,7 +389,7 @@ body {
 }
 
 /* Media Queries for larger screens */
-@media (min-width: 600px) {
+@media (min-width: 700px) {
   .content-card {
       flex-direction: row; /* Row layout for larger screens */
   }
